# cli

./: Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
pkg/cmds/: login.go  root.go
src/: api.rs  cli.rs  conf.rs  main.rs
src/cmd/: completion.rs  create.rs  delete.rs  list.rs  login.rs  mod.rs
