[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resolute"
path = "src/main.rs"

[dependencies]
clap = "3.0.10"
rocket = "0.4.10"
webbrowser = "0.5.5"
anyhow = "1.0.53"
dirs = "4.0.0"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.1"
dialoguer = "0.9.0"
